# uc-mcp-gen

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: plugin.json
.claude/skills/from-openapi-mcp/: SKILL.md
.claude/skills/uc-mcp-tdd/: SKILL.md
.github/workflows/: ci.yml
definitions/: _schema.yaml  slack.yaml
examples/: slack-openapi.yaml
examples/slack-app/: README.md  app.yaml  databricks.yml  pyproject.toml
examples/slack-app/scripts/: deploy.sh
examples/slack-app/src/app/: main.py
openspec/changes/codegen-generate/: design.md  proposal.md  tasks.md
openspec/changes/codegen-generate/specs/generate-command/: spec.md
openspec/changes/codegen-generate/specs/python-emitter/: spec.md
openspec/changes/publish-pypi/: .openspec.yaml  design.md  spec.md  tasks.md
openspec/changes/remove-yaml-path/: design.md  proposal.md  tasks.md
openspec/changes/remove-yaml-path/specs/cleanup/: spec.md
skills/uc-mcp-gen/: SKILL.md
src/uc_mcp/: __main__.py  _schema.yaml  connection.py  engine.py  schema.py  server.py
src/uc_mcp/codegen/: app_generator.py  from_openapi.py  generator.py
src/uc_mcp_gen/: __main__.py
src/uc_mcp_gen/codegen/: generator.py  python_emitter.py
tests/: conftest.py  test_app_generator.py  test_connection.py  test_engine.py  test_from_openapi.py  test_generate_cli.py  test_generator.py  test_python_emitter.py  test_schema.py  test_server.py
tests/fixtures/: simple_definition.yaml  simple_openapi.json  simple_openapi.yaml  slack_definition.yaml  swagger2_style.yaml
tests/fixtures/invalid_definitions/: bad_method.yaml  bad_tool_name.yaml  empty_tools.yaml  missing_name.yaml  missing_tools.yaml
