[project]
name = "uc-mcp-gen"
version = "0.1.0"
description = "Generate Databricks App MCP servers from OpenAPI specs"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0",
    "databricks-sdk>=0.30.0",
    "pyyaml>=6.0",
]
license = "MIT"
readme = "README.md"
authors = [
    { name = "Tanner Wendland" },
]
keywords = ["mcp", "databricks", "openapi", "codegen", "unity-catalog"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.scripts]
uc-mcp-gen = "uc_mcp_gen.__main__:main"

[project.urls]
Homepage = "https://github.com/IceRhymers/uc-mcp-gen"
Repository = "https://github.com/IceRhymers/uc-mcp-gen"
Issues = "https://github.com/IceRhymers/uc-mcp-gen/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uc_mcp_gen"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
